
== tekUI Changelog ==

 * Some cleanup in visibility of symbols, code and build system structure
 * UI: Now evaluates arg, ProgDir, LocalPath, etc. as late as possible,
 allowing the library to be embedded in precompiled form, warnings for
 each missing locale key are shown only once now
 * ImgLoad, Visual: Minor improvements in loading with alpha channel
 * Visual module: Minor API corrections, added documentation
 * Display: Some corrections in API documentation
 * UI: loadImage() can now load from an open file
 * Raw framebuffer: Improved region management, optimizations, added
 support for window backing store, unified input handling, added alignment
 for dirty regions, reducing region merge-ops
 * RawFB, X11: Now suspend indefinitely if no interval events are requested,
 major source code cleanup
 * Compiler: added module exclude list, code cleanup, added documentation

=== 1.09: ===

 * Added basic support for native Linux framebuffer and event interface.
 Support can be compiled into the raw framebuffer display driver.
 * Raw framebuffers automatically recognize the need for a backbuffer now,
 e.g. when a VNC server is running on top a Linux framebuffer and the pixel
 formats differ. Backbuffer support can also be enabled explicitely using
 ui.ExtraArgs = "fb_backbuffer=true"
 * Linux framebuffer keymaps are compiled-in for now, added tool etc/keymap2c
 for conversion; default is /usr/share/keymaps/i386/qwerty/us.map.gz
 * UI, Window: Added ui.Mode = "workbench" for displays without a window
 manager, supporting rudimentary window decorations for close, drag, and
 resize. Added HaveWindowManager attribute to displays and Visual interface
 * Some restructuring and streamlining in pixel conversion and image loading
 * VNC portnumber can be configured using VNC_PORTNUMBER as well as
 ui.ExtraArgs = "vnc_portnumber=1234" 
 * Displays, Area, Canvas: Some layouting and refresh glitches corrected
 * Windows now better remember their window positions and sizes