@@ -13,6 +13,11 @@
 		<blockquote>
 			<ul>
 				<li>
+					Improved Mac OS X support, added support for Solaris and HP-UX, improved
+					configuration and flexibility with regard to custom paths to third party
+					libraries; the Xvid extension is no longer enabled by default
+				</li>
+				<li>
 					Some cleanup in visibility of symbols, code and build system structure
 				</li>
 				<li>
