@@ -5,7 +5,7 @@
 	<head>
 		<title>tekUI Class Reference Manual</title>
 		<link rel="stylesheet" href="manual.css" />
-		<meta name="created" content="22-Nov-2014" />
+		<meta name="created" content="13-Dec-2014" />
 	</head>
 	<body>
 		<h1>
@@ -4859,7 +4859,7 @@ end
 			</p>
 			<hr class="page-break" />
 		</div>
-		<div class="node"><h2><a name="tek.ui.class.display" id="tek.ui.class.display">Display (v33.2)</a></h2>
+		<div class="node"><h2><a name="tek.ui.class.display" id="tek.ui.class.display">Display (v33.3)</a></h2>
 			<div class="definition"><dfn>OVERVIEW</dfn>
 				<blockquote>
 					<p>
@@ -9053,7 +9053,7 @@ ui.Window:new {
 				</blockquote>
 				<hr class="page-break" />
 				<p>
-					Document generated on Sat Nov 22 17:31:07 2014
+					Document generated on Sat Dec 13 16:03:33 2014
 				</p>
 			</div>
 		</div>
