@@ -1,6 +1,9 @@
 
 == tekUI Changelog ==
 
+ * Improved Mac OS X support, added support for Solaris and HP-UX, improved
+ configuration and flexibility with regard to custom paths to third party
+ libraries; the Xvid extension is no longer enabled by default
  * Some cleanup in visibility of symbols, code and build system structure
  * UI: Now evaluates arg, ProgDir, LocalPath, etc. as late as possible,
  allowing the library to be embedded in precompiled form, warnings for
